	* changed: updated SB Social widget to include Google+ and more gracefully handle output of each network's name
	* changed: passed SB and Theme versions through wp_enqueue_style calls
	* changed: footer widgets now hook into sb_footer_widgets via hooks.php (they were previously hard-coded)
	* changed: Options API wysiwyg option to use wp_editor functionality introduced in WP3.3
	* fixed: annoying bug introduced in 2.5.4 that prevented sidebar settings from being stored on first save.
	* fixed: bug that prevented WordPress SEO (by Yoast) from overwriting page titles
	* fixed: bug that would cause the RSS nav menu extra link to use href="true" instead of href="/your/feed/url/"
	* added: /includes/functions/conditionals.php
	* added: /includes/functions/images.php	
	* added: /includes/functions/menus.php	
	* removed: all custom hook functions, replacing them more simply with do_action( 'hook_name' )
	* removed: sb_title() function, since it's only use was having wp_title hooked directly to it
	* removed: page-fullwidth.php (full-width page template) -- use the One Column layout option instead
	* removed: page-tertiarysidebar.php (tertiary sidebar page template ) -- use sidebar manager instead
	* removed: sidebar-tertiary.php (tertiary sidebar) -- use sidebar manager instead
	* removed: built-in Slideshows functionality and dependencies (/includes/scripts/nivo-slider/)
	* removed: Digg shortcode

2012.08.02 - version 2.5.8
	* changed: updated /includes/functions/startbox.php to use wp_get_theme instead of get_theme_data (when supported)
	* chonged: merged in a number of translation fixes from github. Props Koncept-Web

2012.05.16 - version 2.5.7
	* fixed: annoying bug introduced in 2.5.4 that prevented sidebar settings from being stored on first save.
	* fixed: bug that would cause the RSS nav menu extra link to use href="true" instead of href="/your/feed/url/"
	* fixed: bug that prevented WordPress SEO plugin (by Yoast) from rewriting page titles correctly
